docs: changelog for the next release